--- a/exp12/cart.html
+++ b/exp12/cart.html
@@ -1,46 +1,29 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
   <body>
-    <!-- view all products from cart -->
-
     <div>
       <h3>Cart</h3>
       <div id="cart"></div>
-      <p id="total_cost">0</p>
+      <p id="total_cost">Total Cost: 60</p>
       <button id="pay">Pay</button>
     </div>
   </body>
   <script>
-    // get cart from localstorage
     const cart = JSON.parse(localStorage.getItem("cart"));
-    // print cart details
     const cartDiv = document.getElementById("cart");
     cart.forEach((item) => {
       const div = document.createElement("div");
       div.innerText = item.id + " " + item.count;
       cartDiv.appendChild(div);
     });
-
-    // calculate total cost
     const products = JSON.parse(localStorage.getItem("products"));
     let totalCost = 0;
     cart.forEach((item) => {
       const product = products.find((product) => product.id == item.id);
       totalCost += product.price * item.count;
     });
-
     document.getElementById("total_cost").innerText = totalCost;
-
-    // pay
     document.getElementById("pay").addEventListener("click", () => {
       localStorage.setItem("cart", JSON.stringify([]));
-      //   go to payment.html
       window.location.href = "payment.html";
     });
   </script>
