--- a/exp12/userp.html
+++ b/exp12/userp.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
   <body>
-    <!-- current user profile -->
-
     <div>
       <h3>Profile</h3>
-      <div id="profile"></div>
+      <div id="profile">
+        <p>Name: Bala</p>
+        <p>Email: b@mail.com</p>
+      </div>
     </div>
   </body>
   <script>
-    // get user from localstorage
     const user = JSON.parse(localStorage.getItem("user"));
-    // print user details
     const profileDiv = document.getElementById("profile");
     const div = document.createElement("div");
     div.innerText = user.email;
